--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI English Poem Generator</title>
+    <title>🤖 AI English Poem Generator</title>
     <link rel="stylesheet" href="src/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Afacad:wght@400;500;600;700&display=swap"
@@ -11,40 +11,42 @@
     />
   </head>
   <body>
-    <header>
-      <h1>AI English Poem Generator</h1>
-    </header>
-    <main>
-      <form>
-        <input
-          type="text"
-          placeholder="Enter the topic of the English poem here"
-          autofocus
-          required
-          autocomplete="off"
-        />
-        <input type="submit" />
-      </form>
-    </main>
-    <div>
-      The poem will <br />
-      come here.....
+    <div class="container">
+      <header>
+        <h1>🤖 AI English Poem Generator</h1>
+      </header>
+      <main>
+        <form>
+          <input
+            type="text"
+            placeholder="Enter the topic of the English poem here"
+            autofocus
+            required
+            class="poem-title"
+            autocomplete="off"
+          />
+          <input type="submit" class="button" />
+        </form>
+        <div class="poem">
+          The poem will <br />
+          come here.....
+        </div>
+      </main>
+      <footer>
+        AI project coded by
+        <a href="https://github.com/WajihaAbrar" target="_blank">Wajiha Abrar</a
+        >, is open-sourced on
+        <a
+          href="https://github.com/WajihaAbrar/AI-English-Poem-Generator"
+          target="_blank"
+          >GitHub</a
+        >
+        and hosted on
+        <a href="https://ai-english-poem-generator.netlify.app/" target="_blank"
+          >Netlify</a
+        >
+      </footer>
     </div>
-
-    <footer>
-      AI project coded by
-      <a href="https://github.com/WajihaAbrar" target="_blank">Wajiha Abrar</a>,
-      is open-sourced on
-      <a
-        href="https://github.com/WajihaAbrar/AI-English-Poem-Generator"
-        target="_blank"
-        >GitHub</a
-      >
-      and hosted on
-      <a href="https://ai-english-poem-generator.netlify.app/" target="_blank"
-        >Netlify</a
-      >
-    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
