--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>🤖 AI English Poem Generator</title>
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Afacad:wght@400;500;600;700&display=swap"
       rel="stylesheet"
@@ -16,7 +17,7 @@
         <h1>🤖 AI English Poem Generator</h1>
       </header>
       <main>
-        <form>
+        <form id="poem-form">
           <input
             type="text"
             placeholder="Enter the topic of the English poem here"
@@ -27,10 +28,7 @@
           />
           <input type="submit" class="button" />
         </form>
-        <div class="poem">
-          The poem will <br />
-          come here.....
-        </div>
+        <div class="poem" id="poem"></div>
       </main>
       <footer>
         AI project coded by
