Added the AI API integration.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>🤖 AI English Poem Generator</title>
     <link rel="stylesheet" href="src/style.css" />
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Afacad:wght@400;500;600;700&display=swap"
       rel="stylesheet"
@@ -23,6 +24,7 @@
             placeholder="Enter the topic of the English poem here"
             autofocus
             required
+            id="poem-title"
             class="poem-title"
             autocomplete="off"
           />
