--- a/index.html
+++ b/index.html
@@ -18,19 +18,22 @@
         <h1>🤖 AI English Poem Generator</h1>
       </header>
       <main>
-        <form id="poem-form">
-          <input
-            type="text"
-            placeholder="Enter the topic of the English poem here"
-            autofocus
-            required
-            id="poem-title"
-            class="poem-title"
-            autocomplete="off"
-          />
-          <input type="submit" class="button" />
-        </form>
-        <div class="poem" id="poem"></div>
+        <div class="form-container">
+          <form id="poem-form">
+            <input
+              type="text"
+              placeholder="Enter the topic of the English poem"
+              autofocus
+              required
+              id="poem-title"
+              class="poem-title"
+              autocomplete="off"
+            />
+            <input type="submit" class="button" />
+          </form>
+          <div class="hint">i.e. Flowers, Rain, Cake or Cheese....</div>
+        </div>
+        <div class="poem hidden" id="poem"></div>
       </main>
       <footer>
         AI project coded by
