Made the application SEO friendly.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="The poem generator built using HTML, CSS, JavaScript and SheCodes Artificial Intelligence"
+    />
     <title>🤖 AI English Poem Generator</title>
     <link rel="stylesheet" href="src/style.css" />
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
@@ -37,15 +41,23 @@
       </main>
       <footer>
         AI project coded by
-        <a href="https://github.com/WajihaAbrar" target="_blank">Wajiha Abrar</a
+        <a
+          href="https://github.com/WajihaAbrar"
+          title="Profile Link"
+          target="_blank"
+          >Wajiha Abrar</a
         >, is open-sourced on
         <a
           href="https://github.com/WajihaAbrar/AI-English-Poem-Generator"
+          title="GitHub Link"
           target="_blank"
           >GitHub</a
         >
         and hosted on
-        <a href="https://ai-english-poem-generator.netlify.app/" target="_blank"
+        <a
+          href="https://ai-english-poem-generator.netlify.app/"
+          title="Netlify URL"
+          target="_blank"
           >Netlify</a
         >
       </footer>
